# RustyMail

./: .clinerules  .cursorrules  .env.example  .env.test  .gitignore  .todo_checklist.md  ACCOUNT_INTEGRATION_CURRENT_STATUS.md  ACCOUNT_INTEGRATION_STATUS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  OAUTH2_IMPLEMENTATION_STATUS.md  PRD.md  README.md  TODO.md  add-license-headers.py  add-license-headers.sh  changelog.md  claude_desktop_config_stdio.json  clippy.toml  dhat-heap.json  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  ecosystem.config.js  mcp-bridge.js  mcp_testing_backend_plan.md  mcp_testing_plan.md  run_all_tests.sh  rust_implementation_plan.md  sync_cursor_rules_to_cline.sh  talent_tools_PRD.md  test-account-tools.sh  test-mcp-sse.sh  test-splitter.js  test_client_management.sh  test_config_service.sh  test_inventory.md  (+2 more)
.claude/commands/: check-hardcoding-rustymail.md  check-hardcoding.md  clean-all-rustymail.md  clean-all.md  rebuild-all-rustymail.md  rebuild-all.md  update.md
.cursor/rules/: email-operations.mdc  general_coding_rules.mdc  imap-data-models.mdc  interface-implementations.mdc  mcp-protocol.mdc  mcp_testing_backend_plan.mdc  todo_task_management_rules.mdc
.giga/: specifications.json
.github/: dependabot.yml
.sqlx/: query-052e8664b6595169e82774c1a68b8f78a1891066b0ff09113deb93377291c2cf.json  query-060e511f3c45af194cf228bc82e25dd4b27aa1d4dd8c4f942b1447c707f73f7a.json  query-081c5d4181f184b89f73edfbdfc27c1d2cf525dc5b62c2e203aa9abc56e3e750.json  query-0d5fa2b23ef6917a2ad2ca8cd8762c6df79ee84d232b6fad5039b7debd41ddf0.json  query-21620710fc1671fe91c6a8ec2e5dc1affec24eb2ccbf43520c1146820ae20c1e.json  query-33e2e118b20dd4c0f3e1ae6ec7afe158b750b6ae9c3018cd6734bbc347b5404b.json  query-40367c0306275e395b1f3303304808a49475b195f77f0b4661a364564fc90ef8.json  query-42486aa40da1805d38e54d917f84dfabc347f6ddefb5941134eb11cce4f63e72.json  query-498cb2958bbd5e631996486f860307ff19983b1a3280d66a8219980d6b8bff90.json  query-60d51b663cf9d685fe941d7902c4c9e8ddac3d3777cdd92217a0dcedd6d30324.json  query-6855bcc42ac9425cb02f9a4de5307d43beebc3a11e711f1a3e640354a4fbf528.json  query-8142cd12c4ebb0ae84f662a64a39c8e6c038131302853351d4ac462305fb0ab4.json  query-8832e17e6a07aa240cf75e3a93431a2bfc9ad3372b4d726bc9128ec8d68d282b.json  query-8968b595d01a9881f4cbb8acb17200a8a1bc576f393e5d88a15625b92f9581c0.json  query-8afb7073a59c8aa38d7cda07d2d09b0f93a85b36b7edac5c797f05475a7a834a.json  query-b0497493453a5022179480ba1aba717193b90befb02309ca1ef6ad98e2b3eb35.json  query-b2477a9cf65ba3d68d2d931669e2ea29690063b221dd0eee1e4b5cb2840ddcd6.json  query-d8045ba7fde7d252dba0398543616a69d30fa9cd401fa22e31e3c745c481ff45.json  query-f749b9a5d794ab4b537d2548ad1735964336e4a54310e92cd22e36c385111240.json  query-f865b05d065ecb070fef864afef0141d73e10841907a679f3c54ca628f2a2102.json  query-fde8107fa346d2e4877bda06b95c8f1197cfa93064102fb422af6f8aeab9d328.json
.taskmaster/: config.json  state.json
archive/: mcp_refactor.md  mcp_testing_backend_plan.md  mcp_testing_ui_plan.md  problems.md
attachments/: .gitignore
benches/: api_benchmark.rs
config/: accounts.json  accounts.json.example  accounts_connection_status.json  custom.toml  default.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/imap/: client.rs
core/src/models/: email.rs
dashboard-static/: index.html
docs/: ACCOUNT_TOOLS_QUICKSTART.md  CHANGELOG_ACCOUNT_TOOLS.md  DEPLOYMENT.md  ERRORS.md  MEMORY_LEAK_ANALYSIS.md  PROFILING.md  REST-API.md  REST-EXAMPLES.md  account-storage-migration.md  dependency-pins.md  mcp-account-management.md  multi-account-schema-design.md  plan.md  python_test_example.py  refactor_plan.md  system_info.md  test_plan.md
imap-api-rust/: Cargo.toml
imap-api-rust/src/: config.rs  main.rs
imap-api-rust/src/api/: handlers.rs  routes.rs
imap-api-rust/tests/common/: mod.rs
imap-api-rust/tests/integration/: mcp_sse.rs  mcp_stdio.rs  mod.rs  rest_api.rs
imap-api-rust/tests/mocks/: common.rs
imap-api-rust/tests/performance/: mod.rs
imap-api-rust/tests/unit/api/: mod.rs
imap-api-rust/tests/unit/imap/: mod.rs
imap-api-rust/tests/unit_tests/: mod.rs
migrations/: 001_create_schema.sql  001_initial_schema.sql  002_add_attachments.sql  002_add_sync_state.sql  002_create_outbox_queue.sql  002_multi_account_support.sql  003_add_has_attachments_column.sql  003_create_provider_templates.sql  004_create_ai_model_config.sql  005_add_attachment_content_id.sql  006_create_background_jobs.sql  007_create_ai_sampler_configs.sql  008_add_sampler_advanced_options.sql  009_add_thread_headers.sql  010_add_sync_progress.sql  011_add_account_id_to_jobs.sql  012_deduplicate_emails.sql  013_add_attachment_parts.sql  014_backfill_attachment_parts.sql
pinokio/: install.js  pinokio.js  reset.js  start.js  update.js
schema/: email_cache_schema.sql
scripts/: CICD_INTEGRATION.md  DASHBOARD_UI_TEST_PLAN.md  README_UI_TESTS.md  WORKFLOW_INTEGRATION_TESTS.md  build-dashboard.sh  fix_account_id_types.py  kill-and-restart-backend.md  kill-and-restart-backend.sh  profile-memory.sh  refactor_cache_service.py  run-dhat-profiling.sh  run_workflow_tests.sh  test-e2e.sh  test-integration.sh  test-unit.sh  test.sh  test_all.sh  test_coverage.sh  test_dashboard.sh  test_e2e.sh  test_live.sh  test_mcp_client.py  test_ui_e2e.py  test_unit.sh  validate_cicd.sh
src/: batch_synopsis.rs  cli.rs  client_test.rs  config.rs  config_test.rs  connection_pool.rs  error.rs  evidence_export.rs  filter_emails.rs  forensic.rs  lib.rs  macros.rs  main.rs  mcp_attachment_tools.rs  mcp_cache_tools.rs  mcp_port.rs  metadata_export.rs  session_manager.rs  test_helpers.rs  test_mail_parser_leak.rs  transport.rs  transport_test.rs
templates/: index.html
test_data/: mcp_cleanup_attachments_accounts_connection_status.json  security_security_headers_accounts.json
tests/: README.md  basic_imap_test.rs  connection_pool_stress_test.rs  dashboard_api_test.rs  dashboard_sse_test.rs  mcp_integration_test.sh  mcp_integration_test.sh.bak2  performance_tests.rs  rest_e2e_test.rs  rest_live_test.rs
(+444 files in other folders)
