[package]
name = "rustymail"
version = "0.1.0"
edition = "2021"
description = "A modern IMAP client with multiple interface options"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Core IMAP
# Remove imap-next
# imap-next = { git = "https://github.com/duesee/imap-next.git", branch = "main", package = "imap-next", features = ["runtime-tokio", "tls-rustls"] }
# Use async-imap
async-imap = "0.8.0"
# Add imap-types
imap-types = { version = "1.0", features = ["arbitrary", "serde"] }

rustls = "0.23"
# Add back rustls-pki-types, likely needed
rustls-pki-types = "1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web Framework (Actix)
actix-web = "4"
actix-rt = "2"
# Add actix-web-lab for SSE
actix-web-lab = "0.20" 

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"
config = { version = "0.14", features = ["toml"] }
log = "0.4"
env_logger = "0.11"

# Command Line Arguments
clap = { version = "4", features = ["derive", "env"] }

# Futures utility
futures-util = { version = "0.3", features = ["compat", "sink", "io"] } 

# Error Handling
thiserror = "1.0"

# Chrono for date/time
chrono = { version = "0.4", features = ["serde"] }

# TLS support for async-imap
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["compat"] }
rustls-native-certs = "0.7" # Fix typo

# Add imap-codec dependency
# imap-codec = "1.0.0-alpha.5" # Needed for manual command encoding

# Added missing dependencies:
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3" # Or futures-util? Let's try futures first.
async-stream = "0.3"
tokio-stream = "0.1" # Needed for ReceiverStream

# URL Encoding for folder names
urlencoding = "2.1"

[dev-dependencies]
# Remove reqwest native-tls feature if not needed
reqwest = { version = "0.12", features = ["json"] } 
urlencoding = "2.1" # For URL encoding folder names in E2E tests
# Add actix-web for REST E2E tests
actix-web = "4"
# Add once_cell for Lazy static in tests (though may remove Lazy)
once_cell = "1.19"
# Add actix-http for testing utilities like Request type
actix-http = "3"
uuid = { version = "1", features = ["v4"] }
scopeguard = "1.2"

[features]
default = []
# Feature flag for enabling mock integration tests (potentially remove if only live tests)
integration_tests = []
# Feature flag for enabling live integration tests
live_tests = []

[lib]
name = "rustymail"
path = "src/lib.rs"

[[bin]]
name = "rustymail-server"
path = "src/main.rs"
