[package]
name = "rustymail"
version = "0.1.0"
edition = "2021"
description = "A modern IMAP client with multiple interface options"
authors = ["Your Name <your.email@example.com>"]
default-run = "rustymail-server"

[dependencies]
# Core IMAP
# Remove imap-next
# imap-next = { git = "https://github.com/duesee/imap-next.git", branch = "main", package = "imap-next", features = ["runtime-tokio", "tls-rustls"] }
# Use async-imap
async-imap = "0.8.0"
# imap-types removed - using only async-imap now

rustls = "0.23"
# Add back rustls-pki-types, likely needed
rustls-pki-types = "1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web Framework (Actix)
actix = "0.13"
actix-web = "4"
actix-rt = "2"
# Add actix-web-lab for SSE
actix-web-lab = "0.20"
# Add actix-files for serving static files
actix-files = "0.6"
# Add actix-web-actors for WebSocket support
actix-web-actors = "4.3"
# Add CORS support
actix-cors = "0.7"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"

# Configuration
dotenvy = "0.15"
config = { version = "0.14", features = ["toml"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"

# Command Line Arguments
clap = { version = "4", features = ["derive", "env"] }

# Futures utility
futures-util = { version = "0.3", features = ["compat", "sink", "io"] } 

# Error Handling
thiserror = "1.0"

# Chrono for date/time
chrono = { version = "0.4", features = ["serde"] }

# TLS support for async-imap
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["compat"] }
rustls-native-certs = "0.7" # Fix typo

# Add imap-codec dependency
# imap-codec = "1.0.0-alpha.5" # Needed for manual command encoding

# Added missing dependencies:
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3" # Or futures-util? Let's try futures first.
async-stream = "0.3"
tokio-stream = "0.1" # Needed for ReceiverStream

# URL Encoding for folder names
urlencoding = "2.1"

# Added base64 dependency
base64 = "0.21"

# High-concurrency data structures
dashmap = "5.5"
crossbeam = "0.8"

# Encryption for credential storage
aes-gcm = "0.10"
hex = "0.4"

# SHA-256 for OAuth2 PKCE code challenge
sha2 = "0.10"

# System calls (used for safe process checking in sync binary)
libc = "0.2"

# OpenAPI documentation
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }

# MIME parsing
mail-parser = "0.8"

# SMTP sending
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "hostname", "smtp-transport"] }

# Database and caching dependencies
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
lru = "0.12" # For in-memory LRU cache

# ZIP archive support for attachments
zip = { version = "0.6", features = ["deflate"], default-features = false }

# Directory utilities for attachment downloads
dirs = "5.0"

# Dashboard dependencies
sysinfo = "0.30" # For system metrics

# Email autodiscovery
hickory-resolver = "0.26.0-alpha.1" # DNS SRV record lookups
quick-xml = { version = "0.36", features = ["serialize"] } # Mozilla Autoconfig XML parsing

# Lazy static for MIME decoder
lazy_static = "1.4"
rand = "0.8" # For random number generation in example metrics
reqwest = { version = "0.12", features = ["json"] }
oauth2 = { version = "4.4", features = ["reqwest", "rustls-tls"] }
url = "2.5"
# MCP SDK - official Rust SDK from modelcontextprotocol org (Anthropic/AAIF)
rmcp = { version = "0.15", features = ["server"] }
rmcp-macros = "0.15"
async-native-tls = "0.5.0"
tracing = "0.1.41"

tokio-native-tls = "0.3.0"
native-tls = "0.2"

# Optional profiling dependencies
dhat = { version = "0.3", optional = true }

# jemalloc allocator for better memory management (releases memory back to OS)
# Only enabled on non-Windows targets
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
# Remove reqwest native-tls feature if not needed
reqwest = { version = "0.12", features = ["json", "stream"] }
urlencoding = "2.1" # For URL encoding folder names in E2E tests
# Add actix-web for REST E2E tests
actix-web = "4"
# Add once_cell for Lazy static in tests (though may remove Lazy)
once_cell = "1.19"
# Add rand for stress testing
rand = "0.8"
# Add actix-http for testing utilities like Request type
actix-http = "3"
uuid = { version = "1", features = ["v4"] }
scopeguard = "1.2"
dotenv = "0.15.0"
serial_test = "3.1.1"
itertools = "0.12" # Add itertools dependency
lazy_static = "1.4" # For static regex patterns in SSE tests
regex = "1" # For parsing SSE events
mockall = "0.12.1" # Add mockall
tempfile = "3.8" # For temporary directories in tests

[features]
default = []
# Feature flag for enabling mock integration tests (potentially remove if only live tests)
integration_tests = []
# Feature flag for enabling live integration tests
live_tests = []
# Feature flag for heap profiling with DHAT
dhat-heap = ["dep:dhat"]
# Feature flag to use system allocator instead of jemalloc (for testing memory behavior)
system-alloc = []
# Feature flag to use mimalloc instead of jemalloc
mimalloc-alloc = ["mimalloc"]

[lib]
name = "rustymail"
path = "src/lib.rs"

[[bin]]
name = "rustymail-server"
path = "src/main.rs"

[[bin]]
name = "rustymail-mcp-stdio"
path = "src/bin/mcp_stdio.rs"

[[bin]]
name = "rustymail-mcp-stdio-high-level"
path = "src/bin/mcp_stdio_high_level.rs"

[[bin]]
name = "rustymail-sync"
path = "src/bin/sync.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e"
path = "tests/e2e/mod.rs"
