[package]
name = "imap-api-rust"
version = "0.1.0"
edition = "2021"
authors = ["Texas Fortress AI <info@texasfortress.ai>"]
description = "Rust implementation of the IMAP API"

[dependencies]
core = { path = "../core" }
actix-web = "4.3.1"
imap = "2.4.1"
imap-proto = "0.10.2"
native-tls = "0.2.11"
mail-parser = "0.9.1"
lettre = { version = "0.10.4", features = ["builder", "native-tls", "tokio1-native-tls", "smtp-transport", "tracing"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-actix-web = "0.7.4"
tera = "1.19.0"
tokio = { version = "1.28.2", features = ["full"] }
config = { version = "0.13.3", features = ["toml", "yaml"] }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
base64 = "0.21.2"
bstr = "1.4.0"
bytes = "1.4.0"
derive_more = "2.0.1"
env_logger = "0.10.0"
async-trait = "0.1.77"
futures-util = "0.3.31"
parking_lot = "0.12.1"

[dev-dependencies]
mockall = "0.11.4"
criterion = "0.5.1"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
mockito = "1.0"
tokio-test = "0.4.2"
actix-rt = "2.0"
actix-test = "0.1"
futures = "0.3"

[[test]]
name = "imap_client_tests"
path = "tests/unit_tests/imap_client_tests.rs"

[[bench]]
name = "api_benchmark"
harness = false
